<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="LoginFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:id="@+id/serverHostTextView"
                android:text="@string/serverHostLabel"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/serverHostEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="10.0.2.2"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/serverPortTextView"
                android:text="@string/serverPortLabel"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/serverPortEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="8080"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/usernameTextView"
                android:text="@string/usernameLabel"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/usernameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/passwordTextView"
                android:text="@string/passwordLabel"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/passwordEditText"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/firstNameTextView"
                android:text="@string/firstNameLabel"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/lastNameTextView"
                android:text="@string/lastNameLabel"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/emailTextView"
                android:text="@string/emailLabel"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/emailEditText"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/genderTextView"
                android:text="@string/genderLabel"
                android:gravity="end"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maleLabel" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femaleLabel" />

            </RadioGroup>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/loginLabel">
        </Button>
        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/registerLabel">
        </Button>

    </LinearLayout>

</LinearLayout>
